# MPointers

./: CMakeLists.txt  ListaDoble.cpp  ListaDoble.h  main.cpp  test_main.cpp
biblioteca/: MPointerGC.h  MPointers.h  lLista.h
include/: MPointerGC.cpp  MPointerGC.h  MPointers.h  lLista.cpp  lLista.h
src/: MPointers.cpp
